# CxEmu

./: .clang-format  CMakeLists.txt  CMakePresets.json  license.txt  readme.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  emulator_base.h  types.h
nes/: CMakeLists.txt  apu.cpp  apu.h  cart.cpp  cart.h  cpu.cpp  cpu.h  cpu_bus.cpp  cpu_bus.h  emulator.cpp  emulator.h  forward.h  joypad.cpp  joypad.h  mapper.cpp  mapper.h  mirroring.h  op_codes.cpp  palette.cpp  ppu.cpp  ppu.h  ppu_bus.cpp  ppu_bus.h
nes/mappers/: mmc1.cpp  mmc1.h  nrom.cpp  nrom.h  uxrom.cpp  uxrom.h
